# robot_navigation

./: README.md
LIG/SLAM/: CMakeLists.txt
LIG/SLAM/config/: params_camera.yaml  params_lidar.yaml
LIG/SLAM/launch/include/: module_sam.launch
LIG/SLAM/launch/include/config/: rviz.rviz
LIG/SLAM/src/lidar_odometry/: mapOptmization.cpp
LIG/TMAP/: CMakeLists.txt
LIG/TMAP/include/TMAP/: patchwork_obstacle.hpp
LIG/TMAP/src/: gSeg_node.cpp  tMap_node.cpp
LIG/TMAP/utils/: signal_handle.hpp
LIG/lig_path_planning/: CMakeLists.txt  README.md  package.xml
LIG/lig_path_planning/config/: rviz_config_v0.rviz  static_goal.gps
LIG/lig_path_planning/include/: lig_path_v0.h
LIG/lig_path_planning/launch/: node.launch  rviz.launch
LIG/lig_path_planning/maps/: circular_kaist_plot.yaml  drawMap.ipynb  kaist_manual.yaml
LIG/lig_path_planning/param/: costmap_common_params_burger.yaml  globalNlocal_costmap_params.yaml
LIG/lig_path_planning/src/: lig_path.cpp  odom_simulator.cpp  odom_simulator_v1.cpp  path_node.cpp  path_node_v0.cpp
LIG/lig_path_planning1/: CMakeLists.txt
LIG/lig_path_planning1/config/: rviz_config_v0.rviz
LIG/lig_path_planning1/maps/.ipynb_checkpoints/: drawMap-checkpoint.ipynb
LIG/lig_path_planning1/param/: dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
LIG/lig_path_planning1/src/: odom_simulator.cpp
LIG/msgs/tMap_msgs/: package.xml
LIG/navigation/costmap_2d/: CMakeLists.txt
LIG/navigation/costmap_2d/plugins/: static_layer.cpp
LIG/navigation1/costmap_2d/plugins/: lig_local_static_layer.cpp
LIG/navigation1/costmap_2d/src/: costmap_2d_ros.cpp
LIG/navigation1/map_server/src/: main.cpp
LIG/receive_gps/launch/: receive_gps.launch
LIG/receive_gps/src/: receive_gps.cpp
LIG/rviz_satellite/launch/: demo.gps  demo.rviz
SLAM/: CMakeLists.txt  package.xml
SLAM/config/: carla_settings.json  params_camera.yaml  params_camera_KAIST.yaml  params_camera_carla.yaml  params_camera_kitti.yaml  params_camera_kitti_0930.yaml  params_camera_lama.yaml  params_camera_mvsec.yaml  params_camera_new_imu.yaml  params_camera_urbanloco.yaml  params_lidar.yaml  params_lidar_carla.yaml  params_lidar_kitti.yaml  params_lidar_kitti_0930.yaml  params_lidar_lama.yaml  params_lidar_mvsec.yaml  params_lidar_new_imu.yaml  params_lidar_urbanloco.yaml  params_lidar_vivid.yaml  seg_params.yaml
SLAM/launch/: ouster.launch  resize.sh
SLAM/launch/include/: module_rviz.launch  module_sam.launch
SLAM/launch/include/config/: carla.rviz  mvsec.rviz  rviz.rviz
SLAM/msg/: cloud_info.msg
SLAM/src/lidar_odometry/: featureExtraction.cpp  imageProjection.cpp  mapOptmization.cpp  test.cpp  utility.h
SLAM/src/tools/GMM/: GMM.cpp  GMM.h
SLAM/src/visual_odometry/visual_estimator/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
SLAM/src/visual_odometry/visual_estimator/factor/: projection_factor.cpp  projection_factor.h
SLAM/src/visual_odometry/visual_estimator/initial/: initial_alignment.h
SLAM/src/visual_odometry/visual_estimator/utility/: visualization.cpp
SLAM/src/visual_odometry/visual_feature/: feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h  test.cpp
TMAP/: CMakeLists.txt  package.xml
TMAP/config/: params.yaml
TMAP/include/TMAP/: traversability_map.hpp
TMAP/launch/: gSeg_singlePtCloud.launch
TMAP/src/: gSeg_node.cpp  node_gen.cpp  tMap_node.cpp
TMAP/src/include/: node_gen.hpp  patchwork_obstacle.hpp
TMAP/utils/: imu_handle.hpp  map_handle.hpp
launch/: azure.launch  azure_lig.launch  husky.launch  k4aviewer.err  keyop.launch  lig.rviz  optitrack.launch  ouster.launch  oustersync.bash  outserbag.launch  record.sh  recordomni.sh  resize.sh  theta.launch  transport
launch/lig/: record.sh
lig_path_planning/: .gitignore  CMakeLists.txt  README.md
lig_path_planning/config/: rviz_config_v0.rviz
lig_path_planning/include/: lig_path.h
lig_path_planning/launch/: node.launch  rviz.launch
lig_path_planning/maps/: circular_kaist_plot.yaml  drawMap.ipynb
lig_path_planning/param/: costmap_common_params_husky.yaml  globalNlocal_costmap_params.yaml
lig_path_planning/src/: lig_path.cpp  lig_path_v0.cpp  odom_simulator.cpp  odom_simulator_v0.cpp  odom_simulator_v2.cpp  tf_repub.cpp
msgs/tMap_msgs/: CMakeLists.txt
msgs/tMap_msgs/msg/: TrvMapDet_node.msg
ouster/ouster_ros/: os-122039000077.local.json
receive_gps/: CMakeLists.txt  package.xml
receive_gps/launch/: receive_gps.launch
receive_gps/src/: receive_gps.cpp  receive_gps.h
tools/kapture/: kapture_to_rosbag.py
tools/segmatch/: CMakeLists.txt  package.xml
tools/segmatch/include/segmatch/: common.hpp  matcher.hpp  opencv_random_forest.hpp  parameters.hpp  segmented_cloud.hpp
tools/segmatch/src/: matcher.cpp  opencv_random_forest.cpp  segmented_cloud.cpp
tools/segmatch_ros/: CMakeLists.txt  eigenvalue_result.txt  package.xml
tools/segmatch_ros/include/segmatch_ros/: matcher.hpp
tools/segmatch_ros/src/: matcher.cpp  matcher_node.cpp
tools/traj_result/: CMakeLists.txt  package.xml
tools/traj_result/launch/: traj_result.launch
tools/traj_result/src/: traj_get_result.cpp
tools/traj_result/trajectory_results/: stamped_groundtruth.txt  stamped_traj_estimate.txt
tools/traj_result/trajectory_results/saved_results/traj_est/: absolute_err_statistics_sim3_-1.yaml  relative_error_statistics_231_9.yaml  stamped_est_gt_matches.txt
tools/traj_result/trajectory_results/saved_results/traj_est/cached/: cached_rel_err.pickle
tools/vision_opencv-1.12.0/cv_bridge/: CMakeLists.txt
