<?xml version="1.0"?>
<package>
  <name>segmatch</name>
  <version>0.0.0</version>
  <description>The segmatch package</description>
  <maintainer email="egjung94@kaist.ac.kr">lalala</maintainer>
  <author>Euigon Jung</author>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>

  <build_depend>libnabo</build_depend>
  <run_depend>libnabo</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
